--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="note">쪽지</string>
     <string name="mypage">마이페이지</string>
 
+    <string name="nickname">닉네임</string>
+
 </resources>
