[Feat] #3 민원 ui 초기틀 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,12 @@
     <string name="sos_title">112 긴급 연락</string>
     <string name="help">도움이 필요하신가요?</string>
     <string name="call">통화 연결</string>
+    <string name="complaint">민원 글 작성하기</string>
+
 
     <string name="edit">편집</string>
+    <string name="copy">복사</string>
+
 
     <string name="marker_bottomsheet">서대문구청 전동보장구 급속충전기</string>
 
