--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="complaint">민원 글 작성하기</string>
 
 
-    <string name="edit">편집</string>
+    <string name="all_delete">전체삭제</string>
     <string name="copy">복사</string>
 
 
