--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,18 @@
     <string name="call">통화 연결</string>
     <string name="complaint">민원 글 작성하기</string>
 
+    <string name="login_title">로그인이 필요한 기능이에요.</string>
+    <string name="login_sub">로그인 후 더 다양하게 힘전소를 사용해 봐요.</string>
+    <string name="login_input"><u>직접 입력해서 로그인</u></string>
 
+    <string name="recent_search">최근 검색어</string>
     <string name="all_delete">전체삭제</string>
     <string name="copy">복사</string>
+
+    <string name="search_dialog_title">최근 검색어를</string>
+    <string name="search_dialog_sub">모두 삭제 하시겠습니까?</string>
+    <string name="delete">삭제하기</string>
+    <string name="back">아니오</string>
 
 
     <string name="marker_bottomsheet">서대문구청 전동보장구 급속충전기</string>
