--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="note">쪽지</string>
     <string name="mypage">마이페이지</string>
 
-    <string name="nickname">닉네임</string>
+    <string name="nickname">로그인해 주세요</string>
 
     <string name="sos_title">112 긴급 연락</string>
     <string name="help">도움이 필요하신가요?</string>
@@ -29,7 +29,8 @@
 
 
     <string name="marker_bottomsheet">서대문구청 전동보장구 급속충전기</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="withdraw"><u>탈퇴하기</u></string>
+
 
 </resources>
