[Feat] #27 로그인 상태에 따른 상태 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="note">쪽지</string>
     <string name="mypage">마이페이지</string>
 
-    <string name="nickname">로그인해 주세요</string>
+    <string name="nickname">닉네임</string>
 
     <string name="sos_title">112 긴급 연락</string>
     <string name="help">도움이 필요하신가요?</string>
