--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="map">지도</string>
     <string name="list">리스트</string>
     <string name="community">커뮤니티</string>
-    <string name="note">쪽지</string>
+    <string name="note">채팅</string>
     <string name="mypage">마이페이지</string>
 
     <string name="nickname">닉네임</string>
